--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "description": "## Author #### Nugi",
   "main": "cucumber.conf.js",
   "scripts": {
-    "test": "cucumber-js e2e-tests/features --require cucumber.conf.js --require e2e-tests/step-definitions --format node_modules/cucumber-pretty --format json:e2e-tests/report/cucumber_report.json  --format json:e2e-tests/report/cucumber_report.xml",
-    "test-tribe1": "cucumber-js e2e-tests/features-tribe1 --require cucumber.conf.js --require e2e-tests/step-tribe1 --format node_modules/cucumber-pretty --format json:e2e-tests/report/cucumber_report.json  --format json:e2e-tests/report/cucumber_report.xml",
-    "test-tribe2": "cucumber-js e2e-tests/features-tribe2 --require cucumber.conf.js --require e2e-tests/step-tribe2 --format node_modules/cucumber-pretty --format json:e2e-tests/report/cucumber_report.json  --format json:e2e-tests/report/cucumber_report.xml",
-    "test-tribe3": "cucumber-js e2e-tests/features-tribe3 --require cucumber.conf.js --require e2e-tests/step-tribe3 --format node_modules/cucumber-pretty --format json:e2e-tests/report/cucumber_report.json  --format json:e2e-tests/report/cucumber_report.xml",
-    "test-tribe4": "cucumber-js e2e-tests/features-tribe4 --require cucumber.conf.js --require e2e-tests/step-tribe4 --format node_modules/cucumber-pretty --format json:e2e-tests/report/cucumber_report.json  --format json:e2e-tests/report/cucumber_report.xml"
+    "test": "cucumber-js e2e-tests/features --require cucumber.conf.js --require e2e-tests/step-definitions --format node_modules/cucumber-pretty --format json:e2e-tests/report/cucumber_report.json  --format json:e2e-tests/report/cucumber_report.xml"
   },
   "repository": {
     "type": "git",
